[project]
name = "muse-python"
version = "0.1.0"
description = "Test project to experiment using Python with Muse"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cowsay>=6.1",
    "requests>=2.32.3",
]

[dependency-groups]
dev = [
    "python-dotenv>=1.0.1",
    "types-requests>=2.32.0.20241016",
]
